Estructura de capas + ModeloDatos.json

--- a/categorias.html
+++ b/categorias.html
@@ -82,9 +82,5 @@
       </tbody>
     </table>
   </section>
-
-  <!-- Scripts -->
-  <script type="module" src="./js/firebase-config.js"></script>
-  <script type="module" src="./js/categorias.js"></script>
-</body>
+<script type="module" src="../presentation/categorias.js"></script>
 </html>
