--- a/registro.html
+++ b/registro.html
@@ -17,9 +17,6 @@
   <p id="mensaje-registro"></p>
 
   <p>¿Ya tienes una cuenta? <a href="index.html">Inicia sesión</a></p>
-
-  <!-- Firebase y lógica -->
-  <script type="module" src="./js/firebase-config.js"></script>
-  <script type="module" src="./js/registro.js"></script>
+  <script type="module" src="./presentation/registro.js"></script>
 </body>
 </html>
