--- a/dashboard.html
+++ b/dashboard.html
@@ -45,8 +45,6 @@
       <!-- Los gastos se insertan aquí -->
     </tbody>
   </table>
-
-  <script type="module" src="./js/firebase-config.js"></script>
-  <script type="module" src="./js/dashboard.js"></script>
+<script type="module" src="../presentation/dashboard.js"></script>
 </body>
 </html>
