--- a/index.html
+++ b/index.html
@@ -18,8 +18,6 @@
 
   <p>¿No tienes cuenta? <a href="registro.html">Regístrate aquí</a></p>
 
-  <!-- Firebase y lógica -->
-  <script type="module" src="./js/firebase-config.js"></script>
-  <script type="module" src="./js/login.js"></script>
-</body>
+<script type="module" src="presentation/login.js"></script>
+
 </html>
