--- a/index.html
+++ b/index.html
@@ -3,21 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <title>Gastos App</title>
+  <link rel="stylesheet" href="styles/shared.css">
+  <link rel="stylesheet" href="styles/login.css">
 </head>
 <body>
   <h1>Iniciar sesión</h1>
-
   <form id="login-form">
-    <input type="email" id="email" placeholder="Correo electrónico" required />
-    <input type="password" id="password" placeholder="Contraseña" required />
-    <button type="submit">Iniciar sesión</button>
+  <input type="email" id="login-email" placeholder="Correo electrónico" required />
+<div class="input-password-container">
+<input type="password" id="login-password" placeholder="Contraseña" autocomplete="off" required />
+<span id="toggle-login-password" class="password-icon" data-visible="false"></span>
+</div>
+  <button type="submit">Iniciar sesión</button>
   </form>
-
   <p id="mensaje"></p>
-
-
   <p>¿No tienes cuenta? <a href="registro.html">Regístrate aquí</a></p>
-
-<script type="module" src="presentation/login.js"></script>
-
+  <script type="module" src="presentation/login.js"></script>
+</body>
 </html>
