--- a/registro.html
+++ b/registro.html
@@ -1,21 +1,31 @@
-<!-- registro.html -->
 <!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8">
   <title>Gastos App - Registro</title>
+  <link rel="stylesheet" href="styles/shared.css">
+  <link rel="stylesheet" href="styles/registro.css">
 </head>
 <body>
   <h1>Crear una cuenta</h1>
-
   <form id="registro-form">
-    <input type="email" id="registro-email" placeholder="Correo electrónico" required />
-    <input type="password" id="registro-password" placeholder="Contraseña" required />
-    <button type="submit">Registrarse</button>
+  <input type="text" id="registro-nombre" placeholder="Nombre completo" required />
+  
+  <input type="email" id="registro-email" placeholder="Correo electrónico" required />
+  
+<div class="input-password-container">
+  <input type="password" id="password" placeholder="Contraseña" required />
+  <i id="toggle-password" class="password-icon" data-visible="false"></i>
+</div>
+
+<div class="input-password-container">
+  <input type="password" id="confirmar-password" placeholder="Confirmar contraseña" required />
+  <i id="toggle-confirm-password" class="password-icon" data-visible="false"></i>
+</div>
+
+  <button type="submit">Registrarse</button>
   </form>
-
   <p id="mensaje-registro"></p>
-
   <p>¿Ya tienes una cuenta? <a href="index.html">Inicia sesión</a></p>
   <script type="module" src="./presentation/registro.js"></script>
 </body>
